--- a/style.css
+++ b/style.css
@@ -4,4 +4,65 @@
   
   body {
     font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+  }
+
+  header{
+    padding: 50px;
+    text-align: left;
+    background-color:
+    color:
+  }
+
+  img{
+    display: flex;
+    text-align:right;
+    justify-content: flex-end;
+    height: 200px
+  }
+
+  .navbar{
+    display: flex;
+    background-color: ;
+  }
+
+  .navbar a{
+    color: black;
+  padding: 14px 20px;
+  text-decoration: none;
+  text-align: center;
+  }
+
+  .navbar a:hover {
+    background-color: #ddd;
+    color: black;
+  }
+
+  .container{
+    display: flex;
+  flex-wrap: wrap;
+  }
+
+  .sectionleft{
+    flex: 30%;
+  background-color: #f1f1f1;
+  padding: 20px;
+  }
+
+  .sectionright{
+    flex: 70%;
+  background-color: #f1f1f1;
+  padding: 20px;
+  }
+
+  footer{
+    padding: 20px;
+    text-align: center;
+    background: #ddd;
+  }
+
+  @media screen and (max-width: 700px) {
+    .container, .navbar {   
+      flex-direction: column;
+    }
   }
