--- a/style.css
+++ b/style.css
@@ -5,24 +5,23 @@
   body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
-    background-color: #176B87;
+    background-color: white;
+  }
+
+  .container{
+    margin: 15px;;
   }
 
   header{
-    padding: 50px;
-    text-align: left;
+    display: block;
+    align-items: center;
     background-color: #053B50;
     color: #EEEEEE;
   }
 
   img{    
-    height: 200px;
-    width: 200px;
-    border-radius: 15px;
-    position: absolute;
-    right: 100px;
-    top: 15px;
-    
+    max-width: 100px;
+    margin-right: 10px;
   }
 
   .navbar{
@@ -42,7 +41,7 @@
     color: black;
   }
 
-  .container{
+  .row{
     display: flex;
   flex-wrap: wrap;
   }
